--- a/dasboard.html
+++ b/dasboard.html
@@ -170,8 +170,8 @@
 
        Banner
       </h3>
-      <div class="content-text">taruh banner sini buat dassboard statick</div>
-      <button class="content-button">intinya tombol</button>
+      <div class="content-text">holla, are you ready for chiken dinner ? </div>
+      <button class="content-button">Home</button>
      </div>
      <img class="content-wrapper-img" src="" alt="harus png">
     </div>
@@ -180,8 +180,8 @@
      <ul>
       <li class="lg-product">
        <div class="products">
-     <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
-          cntoh
+     <img src="aset/image/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+          Dota 2
        </div>
        <span class="status">
         <span class="status-circle green"></span>
@@ -201,8 +201,8 @@
       </li>
       <li class="lg-product">
        <div class="products">
-     <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
-        cntoh
+     <img src="aset/image/far-cry-5.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+        Far Cry 5
        </div>
 
        <span class="status">
@@ -244,8 +244,8 @@
       </li>
       <li class="lg-product">
        <div class="products">
-      <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
-        cntoh
+      <img src="aset/image/rdr-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+        RDR 2
        </div>
        <span class="status">
         <span class="status-circle green"></span>
@@ -266,17 +266,16 @@
      </ul>
     </div>
     <div class="content-section">
-     <div class="content-section-title">prjek</div>
+     <div class="content-section-title">Terbaru</div>
      <div class="apps-card">
       <div class="app-card">
        <span>
-      <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+      <img src="aset/image/fortnite.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
      
        </span>
        <div class="app-card__subtext">
-        <h3>cntoh</h3>
-        ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-         tempor incididunt ut labore et dolore magna aliqua. </div>
+        <h3>Fortnite</h3>
+        Fortnite is a battle royale game where players battle to be the last one standing on an island, with a focus on building structures and an ever-changing environment. </div>
        <div class="app-card-buttons">
         <button class="content-button status-button">Update</button>
         <div class="menu"></div>
@@ -284,13 +283,12 @@
       </div>
       <div class="app-card">
        <span>
-       <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+       <img src="aset/image/pubg.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
        
        </span>
        <div class="app-card__subtext">
- <h3>cntoh</h3>
-        ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-         tempor incididunt ut labore et dolore magna aliqua. </div>
+ <h3>PUBG</h3>
+        PUBG (PlayerUnknown's Battlegrounds) is a battle royale game where players parachute onto an island, gather weapons, and fight to be the last one standing. </div>
        <div class="app-card-buttons">
         <button class="content-button status-button">Update</button>
         <div class="menu"></div>
@@ -298,13 +296,12 @@
       </div>
       <div class="app-card">
        <span>
-     <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+     <img src="aset/image/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
    
        </span>
        <div class="app-card__subtext">
-        <h3>cntoh</h3>
-          ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-         tempor incididunt ut labore et dolore magna aliqua. 
+        <h3>Dota 2</h3>
+          Dota 2 is a MOBA where two teams of five compete to destroy the enemy's Ancient using unique heroes and strategy.you can play together with your friend
        </div>
        <div class="app-card-buttons">
         <button class="content-button status-button">Update</button>
