--- a/game-all.html
+++ b/game-all.html
@@ -167,42 +167,42 @@
 <div class="geseran">
     <!-- Geser 1 -->
     <div class="geser">
-      <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="gbr">
+      <img src="aset/image/dota-2.jpg" alt="gbr">
       <div class="overlay">
-        <h2>Title 1</h2>
-        <p>Description 1</p>
+        <h2>Dota 2</h2>
+        <p>Dota 2 is a MOBA game by Valve Corporation, released in 2013. Two teams of five players each compete to destroy the other's Ancient.</p>
       </div>
     </div>
     <!-- Geser 2 -->
     <div class="geser">
-      <img src="gbr.jpg" alt="gbr">
+      <img src="aset/image/pubg.jpg" alt="gbr">
       <div class="overlay">
-        <h2>Title 2</h2>
-        <p>Description 2</p>
+        <h2>PUBG</h2>
+        <p>PUBG (PlayerUnknown's Battlegrounds) is a 2017 battle royale game where players fight to be the last person or team standing on a shrinking map.</p>
       </div>
     </div>
     <!-- Geser 3 -->
     <div class="geser">
-      <img src="gbr.jpg" alt="Movie 3">
+      <img src="aset/image/fortnite.jpg" alt="Movie 3">
       <div class="overlay">
-        <h2>Title 3</h2>
-        <p>Description 3</p>
+        <h2>Fortnite</h2>
+        <p>Fortnite is a 2017 battle royale game where players fight to be the last one standing on a shrinking map, with building mechanics for added strategy.</p>
       </div>
     </div>
     <!-- Geser 4 -->
     <div class="geser">
-      <img src="gbr.jpg" alt="gbr">
+      <img src="aset/image/rdr-2.jpg" alt="gbr">
       <div class="overlay">
-        <h2>Title 4</h2>
-        <p> Description 4</p>
+        <h2>RDR 2</h2>
+        <p> Red Dead Redemption 2 is a 2018 open-world game where you play as an outlaw in the late 1800s.</p>
       </div>
     </div>
     <!-- Geser 5 -->
     <div class="geser">
-      <img src="gbr.jpg" alt="gbr">
+      <img src="aset/image/far-cry-5.jpg" alt="gbr">
       <div class="overlay">
-        <h2>Title 5</h2>
-        <p>Description 5</p>
+        <h2>far-cry-5.</h2>
+        <p>Far Cry 5* is a game where you fight a cult in Montana. You can explore freely, do missions, and play with a friend.</p>
       </div>
     </div>
   </div>
@@ -214,8 +214,8 @@
      <ul>
       <li class="lg-product">
        <div class="products">
-     <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
-          cntoh
+     <img src="aset/image/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+          Dota 2
        </div>
        <span class="status">
         <span class="status-circle green"></span>
@@ -235,8 +235,8 @@
       </li>
       <li class="lg-product">
        <div class="products">
-     <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
-        cntoh
+     <img src="aset/image/pubg.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+        PUBG
        </div>
 
        <span class="status">
@@ -278,8 +278,8 @@
       </li>
       <li class="lg-product">
        <div class="products">
-      <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
-        cntoh
+      <img src="aset/image/fortnite.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+        Fortnite
        </div>
        <span class="status">
         <span class="status-circle green"></span>
@@ -304,13 +304,12 @@
      <div class="apps-card">
       <div class="app-card">
        <span>
-      <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+      <img src="aset/image/far-cry-5.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
      
        </span>
        <div class="app-card__subtext">
-        <h3>cntoh</h3>
-        ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-         tempor incididunt ut labore et dolore magna aliqua. </div>
+        <h3>far cry 5</h3>
+        Far Cry 5 is a game where you fight a cult in Montana. You can explore freely, do missions, and play with a friend. </div>
        <div class="app-card-buttons">
         <button class="content-button status-button">Update</button>
         <div class="menu"></div>
@@ -318,13 +317,12 @@
       </div>
       <div class="app-card">
        <span>
-       <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+       <img src="aset/image/PUBG.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
        
        </span>
        <div class="app-card__subtext">
- <h3>cntoh</h3>
-        ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-         tempor incididunt ut labore et dolore magna aliqua. </div>
+ <h3>PUBG</h3>
+        PUBG is a game where you try to be the last person alive on an island by finding weapons and fighting others. </div>
        <div class="app-card-buttons">
         <button class="content-button status-button">Update</button>
         <div class="menu"></div>
@@ -332,13 +330,12 @@
       </div>
       <div class="app-card">
        <span>
-     <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+     <img src="aset/image/fortnite.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
    
        </span>
        <div class="app-card__subtext">
-        <h3>cntoh</h3>
-          ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-         tempor incididunt ut labore et dolore magna aliqua. 
+        <h3>Fortnite</h3>
+          Fortnite is a game where you fight to be the last person or team standing on an island. It’s known for its building mechanics and colorful graphics. 
        </div>
        <div class="app-card-buttons">
         <button class="content-button status-button">Update</button>
