--- a/game-edit.html
+++ b/game-edit.html
@@ -198,8 +198,8 @@
      <ul>
       <li class="lg-product">
        <div class="products">
-     <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
-          cntoh
+     <img src="aset/image/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+          Dota 2
        </div>
        <span class="status">
         <span class="status-circle green"></span>
@@ -219,8 +219,8 @@
       </li>
       <li class="lg-product">
        <div class="products">
-     <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
-        cntoh
+     <img src="aset/image/rdr-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+        RDR 2
        </div>
 
        <span class="status">
@@ -262,8 +262,8 @@
       </li>
       <li class="lg-product">
        <div class="products">
-      <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
-        cntoh
+      <img src="aset/image/fortnite.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+        Fortnite
        </div>
        <span class="status">
         <span class="status-circle green"></span>
@@ -288,13 +288,12 @@
      <div class="apps-card">
       <div class="app-card">
        <span>
-      <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+      <img src="aset/image/fortnite.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
      
        </span>
        <div class="app-card__subtext">
-        <h3>cntoh</h3>
-        ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-         tempor incididunt ut labore et dolore magna aliqua. </div>
+        <h3>Fortnite</h3>
+        Fortnite is a game where you fight to be the last person or team standing on an island. It’s known for its building mechanics and colorful graphics. </div>
        <div class="app-card-buttons">
         <button class="content-button status-button">Update</button>
         <div class="menu"></div>
@@ -302,13 +301,12 @@
       </div>
       <div class="app-card">
        <span>
-       <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+       <img src="aset/image/pubg.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
        
        </span>
        <div class="app-card__subtext">
- <h3>cntoh</h3>
-        ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-         tempor incididunt ut labore et dolore magna aliqua. </div>
+ <h3>PUBG</h3>
+        PUBG is a game where you try to be the last person alive on an island by finding weapons and fighting others. </div>
        <div class="app-card-buttons">
         <button class="content-button status-button">Update</button>
         <div class="menu"></div>
@@ -316,13 +314,12 @@
       </div>
       <div class="app-card">
        <span>
-     <img src="https://www.yudiz.com/codepen/expandable-animated-card-slider/dota-2.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
+     <img src="aset/image/far-cry-5.jpg" alt="img" style="border:1px solid #3291b8; margin-right: 10px;">
    
        </span>
        <div class="app-card__subtext">
-        <h3>cntoh</h3>
-          ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-         tempor incididunt ut labore et dolore magna aliqua. 
+        <h3>Far Cry 5</h3>
+          Far Cry 5 is a game where you fight a cult in Montana. You can explore freely, do missions, and play with a friend. 
        </div>
        <div class="app-card-buttons">
         <button class="content-button status-button">Update</button>
