--- a/game.html
+++ b/game.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin-Game  BLinc</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css'><link rel="stylesheet" href="aset/style/style-game1.css">
-<link rel="stylesheet" href="aset/style/admin-game.css">
+ <link rel="stylesheet" href="aset/style/admin-normal.css">
+   <link rel="stylesheet" href="aset/style/font-awesome-all.css">
+   <link rel='stylesheet' href='aset/style/game-bs.css'>
+   <link rel='stylesheet' href='aset/style/game-caraousel.css'>
+   <link rel="stylesheet" href="aset/style/style-game1.css">
+   <link rel="stylesheet" href="aset/style/admin-game.css">
 <!--<link rel="stylesheet" href="./style.css">-->
 
 </head>
