--- a/dasboard.html
+++ b/dasboard.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin-Origin</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="aset/style/admin-normal.css">
+  <link rel="stylesheet" href="aset/style/font-awesome-all.css">
 <link rel="stylesheet" href="aset/style/admin-dasboard.css">
 </head>
 <body>
