--- a/dasboard.html
+++ b/dasboard.html
@@ -316,7 +316,8 @@
  <div class="overlay-app"></div>
 </div>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="aset/script/script-main.js"></script>
+    <script src='aset/script/jquery213.js'></script>
+  <script  src="aset/script/script-main.js"></script>
 
 </body>
 </html>
