--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <main>
-      <div class="video-bg">
- <video width="320" height="240" autoplay loop muted>
-  <source src="aset/video/back-highlight.mp4" type="video/mp4">
+  <main>
+    <div class="video-bg">
+        <video width="320" height="240" autoplay loop muted onerror="this.style.display='none';">
+            <source src="aset/video/backdd-highlight.mp4" type="video/mp4">
+            
+        </video>
+        <div class="fallback-bg"></div>
 
-</video>
-<!--  backcolor     <div></div> -->
 <svg id="svg2" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 700 250">
   <g>
     <path id="id3_2" d="M195.7 232.67h-37.1V149.7H27.76c-2.64 0-5.1-.5-7.36-1.49-2.27-.99-4.23-2.31-5.88-3.96-1.65-1.65-2.95-3.61-3.89-5.88s-1.42-4.67-1.42-7.22V29.62h36.82v82.98H158.6V29.62h37.1v203.05z"/>
