--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <main>
     <div class="video-bg">
         <video width="320" height="240" autoplay loop muted onerror="this.style.display='none';">
-            <source src="aset/video/backdd-highlight.mp4" type="video/mp4">
-            
+            <source src="aset/video/back-highlight.mp4" type="video/mp4">
+            <!--kalau video  gk detek, ganti back neon -->
         </video>
         <div class="fallback-bg"></div>
 
